src/test/ui/traits/trait-object-auto-dedup-in-impl.stderr
error[E0592]: duplicate definitions with name `test`
  --> $DIR/trait-object-auto-dedup-in-impl.rs:16:5
   |
LL | /     fn test(&self) {
LL | |     //~^ ERROR duplicate definitions with name `test`
LL | |         println!("one");
LL | |     }
   | |_____^ duplicate definitions for `test`
...
LL | /     fn test(&self) {
LL | |         println!("two");
LL | |     }
   | |_____- other definition for `test`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0592`.
